# AgentScope

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  setup.py
.github/workflows/: k8s-workspace.yml  unittest.yml
docs/: NEWS.md  NEWS_zh.md
docs/tutorial/en/: build.sh  conf.py  index.rst
docs/tutorial/zh_CN/: build.sh  conf.py  index.rst
en/.doctrees/: agentscope.agents.agent.doctree  agentscope.agents.dialog_agent.doctree  agentscope.agents.dict_dialog_agent.doctree  agentscope.agents.doctree  agentscope.agents.operator.doctree  agentscope.agents.rag_agent.doctree  agentscope.agents.react_agent.doctree  agentscope.agents.rpc_agent.doctree  agentscope.agents.text_to_image_agent.doctree  agentscope.agents.user_agent.doctree  agentscope.constants.doctree  agentscope.doctree  agentscope.exception.doctree  agentscope.file_manager.doctree  agentscope.logging.doctree  agentscope.manager.doctree  agentscope.memory.doctree  agentscope.memory.memory.doctree  agentscope.memory.temporary_memory.doctree  agentscope.message.doctree  agentscope.message.msg.doctree  agentscope.message.placeholder.doctree  agentscope.models.config.doctree  agentscope.models.dashscope_model.doctree  agentscope.models.doctree  agentscope.models.gemini_model.doctree  agentscope.models.litellm_model.doctree  agentscope.models.model.doctree  agentscope.models.ollama_model.doctree  agentscope.models.openai_model.doctree  agentscope.models.post_model.doctree  agentscope.models.response.doctree  agentscope.models.yi_model.doctree  agentscope.models.zhipu_model.doctree  agentscope.msghub.doctree  agentscope.parsers.code_block_parser.doctree  agentscope.parsers.doctree  agentscope.parsers.json_object_parser.doctree  agentscope.parsers.parser_base.doctree  agentscope.parsers.regex_tagged_content_parser.doctree  (+77 more)
en/.doctrees/tutorial/: 102-installation.doctree  103-example.doctree  104-usecase.doctree  105-logging.doctree  201-agent.doctree  203-model.doctree  203-parser.doctree  203-stream.doctree  204-service.doctree  206-prompt.doctree  207-monitor.doctree  208-distribute.doctree  209-gui.doctree  209-prompt_opt.doctree  210-rag.doctree  211-web.doctree  advance.doctree  main.doctree
examples/agent/realtime_multiple_agent/: multi_agent.html
examples/agent/realtime_voice_agent/: README.md  (+8 more)
examples/rag/: README.md
examples/react_agent/: main.py
examples/voice_conversation/: README.md  _audio_assistant_agent.py  _audio_model.py  _audio_user_agent.py  _customized_omni_callback.py  main.py
examples/web_ui/: pnpm-lock.yaml  pnpm-workspace.yaml
scripts/model_examples/: README.md  anthropic_call.py  anthropic_multiagent.py  anthropic_multiagent_multimodal.py  anthropic_multimodal.py  dashscope_call.py  dashscope_multiagent.py  dashscope_multiagent_multimodal.py  dashscope_multimodal.py  deepseek_call.py  deepseek_multiagent.py  gemini_call.py  gemini_multiagent.py  gemini_multiagent_multimodal.py  gemini_multimodal.py  kimi_call.py  kimi_multiagent.py  kimi_multiagent_multimodal.py  kimi_multimodal.py  ollama_call.py  ollama_multiagent.py  ollama_multiagent_multimodal.py  ollama_multimodal.py  openai_chat_call.py  openai_chat_multiagent.py  openai_chat_multiagent_multimodal.py  openai_chat_multimodal.py  openai_response_call.py  openai_response_multiagent.py  openai_response_multiagent_multimodal.py  openai_response_multimodal.py  run_tests.py  xai_call.py  xai_multiagent.py  xai_multiagent_multimodal.py  xai_multimodal.py
src/agentscope/: __init__.py  _version.py
tests/: _daytona_live_utils.py  agent_basic_test.py  agent_injection_test.py  agent_interrupt_test.py  agent_structured_output_test.py  agui_protocol_test.py  app_lifespan_dedicated_test.py  backend_bubblewrap_test.py  backend_daytona_test.py  backend_docker_test.py  backend_e2b_test.py  backend_opensandbox_test.py  builtin_bash_test.py  builtin_powershell_test.py  builtin_read_test.py  compress_context_test.py  compress_tool_result_test.py  event_to_message_test.py  formatter_anthropic_test.py  formatter_dashscope_test.py  formatter_deepseek_test.py  formatter_gemini_test.py  formatter_kimi_test.py  formatter_moonshot_test.py  formatter_ollama_test.py  formatter_openai_chat_test.py  formatter_openai_response_test.py  formatter_openai_test.py  formatter_xai_test.py  hitl_external_execution_test.py  hitl_mixed_interrupt.py  hitl_user_confirmation_test.py  logger_test.py  memory_test.py  message_test.py  middleware_filesystem_memory_test.py  middleware_test.py  model_anthropic_test.py  model_base_test.py  model_dashscope_test.py  (+61 more)
tests/docker/: k8s_workspace_test.Dockerfile
zh_CN/.doctrees/: agentscope.agents.agent.doctree  agentscope.agents.dialog_agent.doctree  agentscope.agents.dict_dialog_agent.doctree  agentscope.agents.doctree  agentscope.agents.operator.doctree  agentscope.agents.rag_agent.doctree  agentscope.agents.react_agent.doctree  agentscope.agents.rpc_agent.doctree  agentscope.agents.text_to_image_agent.doctree  agentscope.agents.user_agent.doctree  agentscope.constants.doctree  agentscope.doctree  agentscope.exception.doctree  agentscope.file_manager.doctree  agentscope.logging.doctree  agentscope.manager.doctree  agentscope.memory.doctree  agentscope.memory.memory.doctree  agentscope.memory.temporary_memory.doctree  agentscope.message.doctree  agentscope.message.msg.doctree  agentscope.message.placeholder.doctree  agentscope.models.config.doctree  agentscope.models.dashscope_model.doctree  agentscope.models.doctree  agentscope.models.gemini_model.doctree  agentscope.models.litellm_model.doctree  agentscope.models.model.doctree  agentscope.models.ollama_model.doctree  agentscope.models.openai_model.doctree  agentscope.models.post_model.doctree  agentscope.models.response.doctree  agentscope.models.yi_model.doctree  agentscope.models.zhipu_model.doctree  agentscope.msghub.doctree  agentscope.parsers.code_block_parser.doctree  agentscope.parsers.doctree  agentscope.parsers.json_object_parser.doctree  agentscope.parsers.parser_base.doctree  agentscope.parsers.regex_tagged_content_parser.doctree  (+77 more)
(+472 files in other folders)
